--- a/wokrs/vip.html
+++ b/wokrs/vip.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<content>
-			<header>
+			<header id="a">
 				<img src="images/vip/vip-header.png" alt="vip头部banner图" />
 			</header>
 			<article lang="account">
@@ -126,7 +126,7 @@
 					$(this).addClass("vip_blue");
 					$(".vip_content .Show").hide();
 					$(".vip_content .Show").eq(show).show();
-				});
-		</script>
+				}); 
+		</script> 
 	</body> 
 </html>
