--- a/wokrs/tiny-credit/1000red-pack.html
+++ b/wokrs/tiny-credit/1000red-pack.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="red-pack">
+<html>
 
 	<head>
 		<meta charset="UTF-8">
@@ -98,6 +98,9 @@
 				color: white;
 				letter-spacing: .2rem;
 			}
+			article > form > p span {
+				display: none;
+			}
 			
 			article > form > span {
 				display: block;
@@ -152,71 +155,45 @@
 		</style>
 	</head>
 
-	<body ng-controller="packData">
+	<body>
 		<article>
-			<form name="redPack" ng-submit="save()">
+			<form>
 
-				<input class="testing" type="text" placeholder="手机号码" name="phone" ng-model="formDate.phone" ng-minlength=3 ng-maxlength=11 maxlength="15" ng-pattern="/^(13[0-9]|15[0|3|6|7|8|9]|18[8|9])\d{8}$/"/>
+				<input class="testing" type="text" placeholder="手机号码" name="phone"/>
 
-				<p>
-					<span ng-messages="redPack.phone.$error">
-						<!--<span ng-message="" ng-cloak>请输入手机号码</span>-->
-						<span ng-message="minlength" ng-cloak>手机号码小于3位</span>
-						<span ng-message="maxlength" ng-cloak>手机号码超过11位</span>
-						<span ng-message="pattern" ng-cloak>请输入正确的手机号码</span>
-						<span ng-message="" ng-cloak>该手机号已注册，本活动也仅限邀请新注册用户</span><!--没写-->
-					</span>
+				<p> 
+					<!--<span ng-message="" ng-cloak>请输入手机号码</span>-->
+					<span>手机号码小于3位</span>
+					<span>手机号码超过11位</span>
+					<span>请输入正确的手机号码</span>
+					<span>该手机号已注册，本活动也仅限邀请新注册用户</span><!--没写--> 
 				</p>
 
 				<span>
-					<input class="testing testing-width" type="text" placeholder="图形验证码" name="graph" ng-model="formDate.graph" maxlength="4" ng-pattern="/^[A-Za-z0-9]{4}$/"/>
-					<span ng-init="testImg = 'http://www.kuaijiecaifu.com/global-verify.html'">
-						<img ng-click="testing()" ng-src="{{testImg}}"/>
+					<input class="testing testing-width" type="text" placeholder="图形验证码" name="graph"/> 
+					<span>
+						<img src="images/active-texting.png"/> 
 					</span>
 				</span>
 
-				<p>
-					<span ng-messages="redPack.graph.$error">
-						<span ng-message="pattern">图形验证码错误</span>
-					</span>
+				<p> 
+					<span>图形验证码错误</span> 
 				</p>
 
 				<span>
-					<input class="testing testing-width" type="text" placeholder="手机验证码" name="phoneTest" ng-model="formDate.phoneTest" maxlength="6" ng-pattern="/^[0-9]{6}$/"/>
+					<input class="testing testing-width" type="text" placeholder="手机验证码" name="phoneTest"/>
 					<span>
 						<button class="testing submit" type="button">获取验证码</button>
 					</span>
 				</span>
 
-				<p>
-					<span ng-messages="redPack.phoneTest.$error">
-						<span ng-message="pattern">手机验证码错误</span>
-					</span>
+				<p> 
+					<span>手机验证码错误</span> 
 				</p>
 
 				<button type="submit" class="testing">马上领取吧！</button> 
 			</form>
-		</article>
-		<script src="../js/jquery-2.1.4.min.js"></script>
-		<script src="../js/angular.min.js"></script>
-		<script src="../js/angular-messages.min.js"></script>
-		<script>
-			var pack = angular.module('red-pack', ['ngMessages']);
-			pack.controller('packData', function($scope) {
-				$scope.testing = function() {
-					$scope.testImg = "http://www.kuaijiecaifu.com/Global-verify.html?random=" + Math.random();
-				}  
-			});   
-			function testingSave($scope, $http) {  
-				$scope.formDate = {}; //数据
-				$scope.save = function() {   
-					$http.post('php', $scope.formData)
-						.success(function(date) {
-							console.log(date);
-						});
-				}
-			}//没写
-		</script>
+		</article>   
 	</body>
 
 </html>
