--- a/mobile/App/m.kj.html
+++ b/mobile/App/m.kj.html
@@ -241,15 +241,15 @@
 		<!-- Pubilc-foot -->
 		<article class="m-kj-foot">
 			<div>
-				<a href="#" class="grayIcon1 blueIcon1">
+				<a href="m.kj.html" class="grayIcon1 blueIcon1">
 					<i></i>
 					<em>首页</em>
 				</a>
-				<a href="#" class="grayIcon2">
+				<a href="m-invest.html" class="grayIcon2">
 					<i></i>
 					<em>投资</em>
 				</a>
-				<a href="#" class="grayIcon3">
+				<a href="m-logIn.html" class="grayIcon3">
 					<i></i>
 					<em>财富</em>
 				</a>
@@ -257,8 +257,9 @@
 		</article>
 		<script src="js/jquery.js"></script>
 		<script src="js/swiper.js"></script>
+		<script src="js/public.js"></script>
 		<script src="js/ring.js"></script>
-		<script src="js/m-kj.js"></script>
+		<script src="js/m-kj-index.js"></script>
 	</body>
 
 </html>
